# ChapSnap

./: CHANGELOG.md  README.md  pyproject.toml  utilities.py
.github/workflows/: cd.yml  ci.yml
chapsnap/: main.py
