[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ChapSnap"
version = "1.1.0"
description = "Resync Chapters by snapping them to Scene Changes."
authors = ["rlaphoenix <rlaphoenix@pm.me>"]
readme = "README.md"
repository = "https://github.com/rlaphoenix/ChapSnap"
keywords = ["python", "chapters", "video", "analysis", "scene-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/rlaphoenix/ChapSnap/issues"
"Forums" = "https://github.com/rlaphoenix/ChapSnap/discussions"
"Changelog" = "https://github.com/rlaphoenix/ChapSnap/blob/master/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
click = "^8.1.3"
rich = "^13.3.4"

[tool.poetry.scripts]
chapsnap = "chapsnap.main:main"
